@@ -8,6 +8,7 @@
 /MYMETA.json
 /MYMETA.yml
 /pm_to_blib
+/README
 *.swp
 *.bak
 *.tar.gz
